queue operations and its animations